--- a/Python Introduction.ipynb
+++ b/Python Introduction.ipynb
@@ -67,6 +67,24 @@
     "c += 10\n",
     "print(\"c has the value\", c)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Looping"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Python for loops!"
+   ]
   }
  ],
  "metadata": {
