--- a/Python Introduction.ipynb
+++ b/Python Introduction.ipynb
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -53,7 +53,7 @@
      "output_type": "stream",
      "text": [
       "a is greater than 5\n",
-      "c has the value 41.0\n"
+      "c has the value 15.0\n"
      ]
     }
    ],
@@ -79,11 +79,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n"
+     ]
+    }
+   ],
    "source": [
-    "#Python for loops!"
+    "#Python for loops!\n",
+    "print(a)\n",
+    "d = 20"
    ]
   }
  ],
