Set up Notebooks... more or less done

--- a/python_introduction.ipynb
+++ b/python_introduction.ipynb
@@ -4,7 +4,35 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Variables\n",
+    "# Python Basics"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Primitive Data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Strings"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Slices"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Variables\n",
     "Variables in python are easy to create, you just assign them a value and they appear.  Types... Whatever the data is.  Python is not strongly typed.  This will cause loss of hair later.  Enjoy.\n",
     "\n",
     "print() is the way to get some output"
@@ -12,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +67,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Selection\n",
+    "## Selection\n",
     "if is your friend.  We don't use braces to mark code blocks, Python uses a colon and indentation.  It is hard and fast.  If your indentation is wrong, your code is wrong. There is no fancy button fixes up your indentation, sorry.\n"
    ]
   },
@@ -102,7 +130,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# I/O\n",
+    "## I/O\n",
     "Need me some of that File I/O too."
    ]
   },
