Add basic dictionary tutorial to python data structures notebook

--- a/python_basic_structures.ipynb
+++ b/python_basic_structures.ipynb
@@ -67,7 +67,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### List methods and functions\n",
+    "### Selected list methods and functions\n",
     "\n",
     "For each of these, assume my_list is a Python list\n",
     "\n",
@@ -75,12 +75,14 @@
     "* `my_list.append(e)`: adds the element to the end of the list\n",
     "* `my_list.extend(another_list)`: appends all elements in `another_list` to the end of `my_list`\n",
     "\n",
+    "and so many more!  Check out https://docs.python.org/3/tutorial/datastructures.html#more-on-lists to see a more complete list.\n",
+    "\n",
     "**Try it!** In the cell below, There are two lists defined; complete the following tasks:\n",
     "\n",
     "* Print the length of `list1`\n",
     "* Add a string to the end of `list2`\n",
     "* Print the length of `list2`\n",
-    "* Add all elements in `list2` to the end of `list1`"
+    "* Add all elements in `list2` to the end of `list1`\n"
    ]
   },
   {
@@ -159,7 +161,107 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Dictionary"
+    "### List Slicing\n",
+    "\n",
+    "TODO; finish DICT first"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Dictionary\n",
+    "\n",
+    "Dictionaries (or `dict`s) are the Python implementation of the `HashMap`; that is they store key/value pairs, allow searching based on keys, and are generally downright awesome.  Keys and values do not need to be the same (or consistent) types.  However keys must be _hashable_ (specifically, the objects that are the keys must have the `__hash__()` and `__eq__()` methods defined, though that is an implementation detail we don't necessarily need).\n",
+    "\n",
+    "Dictionaries can be created using curly brackets (`{}`), with a comma separated list of `key:value` pairs.  As with lists, dictionaries can be \"indexed\" using the key values.  Additionally, keys that have not been used yet may be assigned to (though not read from)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "bob\n",
+      "asdf\n",
+      "33\n",
+      "[90, 100, 5]\n",
+      "{'name': 'bob', 'age': 33, 1: 'asdf', 'grades': [90, 100, 5]}\n"
+     ]
+    }
+   ],
+   "source": [
+    "my_dict = {'name': 'bob', 'age': 33, 1: 'asdf'}\n",
+    "print(my_dict['name'])\n",
+    "print(my_dict[1])\n",
+    "print(my_dict['age'])\n",
+    "# print(my_dict['height']) # this throws a KeyError\n",
+    "# Check it out! values can be a list!\n",
+    "my_dict['grades'] = [90, 100, 5]\n",
+    "print(my_dict['grades'])\n",
+    "# Lists are NOT HASHABLE, so they cannot be the key\n",
+    "print(my_dict)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Try it!**: Create a dictionary that contains information about you: your name, your age, your height, and a list of your favorite things.  Print the data in your dictionary."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Dictionaries have an interesting feature; they have a consistent mapping to the Objects defined in the JSON data serialization format.  One way that we can get information from databases or web APIS is through JSON; this makes it a flexible way for us to access and manipulate data from these kinds of sources.\n",
+    "\n",
+    "### Selected dictionary methods and functions\n",
+    "\n",
+    "For each of these assume `my_dict` is a Python Dictionary\n",
+    "\n",
+    "* `len(my_dict)`: Returns the number of key/value pairs in the dictionary\n",
+    "* `my_dict.keys()`: Returns a view of the dictionary's keys\n",
+    "* `my_dict.values()`: Returns a view of the dictionary's values\n",
+    "* `my_dict.get(key[,default])`: Returns the value associated with the key.  If you specify the optional `default`, will return that if the key does not exist in the dictionary; otherwise if the key does not exist in the dictionary it will raise a `KeyError`\n",
+    "\n",
+    "Check out https://docs.python.org/3/library/stdtypes.html#typesmapping for a more complete list.\n",
+    "\n",
+    "### Iteration through dictionaries\n",
+    "\n",
+    "Dictionaries are iterable; when using a loop to walk through the elements of a dictionary the variable will contain each **key** in the dictionary:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "name bob\n",
+      "age 33\n",
+      "1 asdf\n"
+     ]
+    }
+   ],
+   "source": [
+    "my_dict = {'name': 'bob', 'age': 33, 1: 'asdf'}\n",
+    "for key in my_dict:\n",
+    "    print(key, my_dict[key])"
    ]
   },
   {
