Clarify operation complexities of dicts

--- a/python_basic_structures.ipynb
+++ b/python_basic_structures.ipynb
@@ -172,7 +172,13 @@
    "source": [
     "## Dictionary\n",
     "\n",
-    "Dictionaries (or `dict`s) are the Python implementation of the `HashMap`; that is they store key/value pairs, allow searching based on keys, and are generally downright awesome.  Keys and values do not need to be the same (or consistent) types.  However keys must be _hashable_ (specifically, the objects that are the keys must have the `__hash__()` and `__eq__()` methods defined, though that is an implementation detail we don't necessarily need).\n",
+    "Dictionaries (or `dict`s) are the Python implementation of the `HashMap`; that is they store key/value pairs, allow searching based on keys, and are generally downright awesome.  Keys and values do not need to be the same (or consistent) types.  However keys must be _hashable_ (specifically, the objects that are the keys must have the `__hash__()` and `__eq__()` methods defined, though that is an implementation detail we don't necessarily need).  The fact that it is an implementation of a `HashMap` means that it has the following characteristics:\n",
+    "\n",
+    "| Get/Set | Search (for key) | Add | Remove| \n",
+    "| :---: | :---: | :---: | :---: |\n",
+    "| O(1) | O(1) | O(1) | O(1) |\n",
+    "\n",
+    "Searching for values is O(n), and probably should be avoided unless you have a very good reason to do so (as values are not required to be unique, but keys must be)\n",
     "\n",
     "Dictionaries can be created using curly brackets (`{}`), with a comma separated list of `key:value` pairs.  As with lists, dictionaries can be \"indexed\" using the key values.  Additionally, keys that have not been used yet may be assigned to (though not read from)."
    ]
