--- a/python_basic_structures.ipynb
+++ b/python_basic_structures.ipynb
@@ -21,7 +21,9 @@
     "\n",
     "Lists are created using the square brackets ([]) with a comma separated list of elements in between (there are other cool ways as well that we may discuss later). Individual elements can be accessed through the _index_ of the element.\n",
     "\n",
-    "_Note:_ Python lists are zero indexed; the first element is at index zero, and the last element is at len(list) - 1.  Unlike languages like Java or C++ the elements in the list do NOT need to be the same type"
+    "_Note:_ Python lists are zero indexed; the first element is at index zero, and the last element is at len(list) - 1.  Unlike languages like Java or C++ the elements in the list do NOT need to be the same type\n",
+    "\n",
+    "_Other note:_"
    ]
   },
   {
@@ -163,7 +165,48 @@
    "source": [
     "### List Slicing\n",
     "\n",
-    "TODO; finish DICT first"
+    "Python lists have an incredibly powerful and flexible indexing mechanism that allows you to **slice** them (and get views of your data).  A python slice takes the form:\n",
+    "\n",
+    "```python\n",
+    "my_list[start:stop:stride] \n",
+    "# gets the list from index start (inclusive) to \n",
+    "# stop(exclusive), and add stride to the current index\n",
+    "# every time\n",
+    "```\n",
+    "\n",
+    "If you do not wish to specify a stride, you can omit the last colon (it defaults to 1).\n",
+    "\n",
+    "If you do not specify the start value, it defaults to 0.  If you do not specify the stop value, it defaults to `len(my_list)`\n",
+    "\n",
+    "Python list slicing is best demonstrated with some examples:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19]\n",
+      "[5, 6, 7, 8, 9]\n",
+      "[1, 3, 5, 7, 9, 11, 13, 15, 17, 19]\n",
+      "[0, 2, 4, 6, 8, 10, 12, 14, 16, 18]\n",
+      "[1, 4, 7, 10, 13]\n",
+      "[19, 18, 17, 16, 15, 14, 13, 12, 11, 10, 9, 8, 7, 6, 5, 4, 3, 2, 1, 0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "my_list = list(range(20)) # quick and dirty list with values\n",
+    "print(my_list)\n",
+    "print(my_list[5:10])\n",
+    "print(my_list[1::2]) # start at index 1, go to end, and skip every other\n",
+    "print(my_list[::2]) # start at index 0, go to end, skip every other\n",
+    "print(my_list[1:15:3])\n",
+    "print(my_list[::-1]) # reverse the list!  (walk through in reverse)"
    ]
   },
   {
@@ -178,7 +221,7 @@
     "| :---: | :---: | :---: | :---: |\n",
     "| O(1) | O(1) | O(1) | O(1) |\n",
     "\n",
-    "Searching for values is O(n), and probably should be avoided unless you have a very good reason to do so (as values are not required to be unique, but keys must be)\n",
+    "Searching for values is O(n), and probably should be avoided unless you have a very good reason to do so (as values are not required to be unique, but keys must be).\n",
     "\n",
     "Dictionaries can be created using curly brackets (`{}`), with a comma separated list of `key:value` pairs.  As with lists, dictionaries can be \"indexed\" using the key values.  Additionally, keys that have not been used yet may be assigned to (though not read from)."
    ]
