Add tuple tutorial

--- a/python_basic_structures.ipynb
+++ b/python_basic_structures.ipynb
@@ -23,12 +23,12 @@
     "\n",
     "_Note:_ Python lists are zero indexed; the first element is at index zero, and the last element is at len(list) - 1.  Unlike languages like Java or C++ the elements in the list do NOT need to be the same type\n",
     "\n",
-    "_Other note:_"
+    "_Other note:_ Python lists can handle _negative_ indexing; an index of -1 will print the last element, -2 will print the second to last element, etc."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -38,7 +38,8 @@
       "5\n",
       "3\n",
       "[1, 3, 5, 7]\n",
-      "[2, 3, 5, 7]\n"
+      "[2, 3, 5, 7]\n",
+      "7\n"
      ]
     }
    ],
@@ -48,7 +49,8 @@
     "print(my_list[1])\n",
     "print(my_list)\n",
     "my_list[0] = 2\n",
-    "print(my_list)"
+    "print(my_list)\n",
+    "print(my_list[-1])"
    ]
   },
   {
@@ -213,6 +215,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Note that strings (which are technically just lists of characters) can be sliced the same way."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Dictionary\n",
     "\n",
     "Dictionaries (or `dict`s) are the Python implementation of the `HashMap`; that is they store key/value pairs, allow searching based on keys, and are generally downright awesome.  Keys and values do not need to be the same (or consistent) types.  However keys must be _hashable_ (specifically, the objects that are the keys must have the `__hash__()` and `__eq__()` methods defined, though that is an implementation detail we don't necessarily need).  The fact that it is an implementation of a `HashMap` means that it has the following characteristics:\n",
@@ -317,7 +326,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Tuple"
+    "## Tuple\n",
+    "\n",
+    "Tuples are similar to lists, but they have one important feature: they are _immutable_"
    ]
   },
   {
