Add set description; very brief as we may not use them very much

--- a/python_basic_structures.ipynb
+++ b/python_basic_structures.ipynb
@@ -328,14 +328,43 @@
    "source": [
     "## Tuple\n",
     "\n",
-    "Tuples are similar to lists, but they have one important feature: they are _immutable_"
+    "Tuples are similar to lists, but they have one important feature: they are _immutable_, which means they are _hashable_.  Tuples are created and used similarly to lists, but using parenthesis instead of square brackets.  Their indexing operations remain the same."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 2, 3)\n",
+      "(1, 3)\n",
+      "{(1, 2, 3): 'this is nifty!'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "my_tuple = (1, 2, 3)\n",
+    "print(my_tuple)\n",
+    "print(my_tuple[::2])\n",
+    "my_dict = dict()\n",
+    "# you cannot do this with a list!\n",
+    "my_dict[my_tuple] = 'this is nifty!'\n",
+    "print(my_dict)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Sets for fun"
+    "## Sets for fun\n",
+    "\n",
+    "Python sets, while cool, may not be used in these courses very much.  They are implementations of the `HashSet`, so they can only store elements that are hashable.  See https://docs.python.org/3/library/stdtypes.html#set-types-set-frozenset for more information on sets.\n",
+    "\n",
+    "Note that sets are mutable, and as such are not implicitly hashable; if you want to use a `set` as a key in a dictionary (or have a set of sets) you should use the immutable and hashable `frozenset` class that Python pr"
    ]
   }
  ],
