Brief intro to searching in python lists

--- a/python_basic_structures.ipynb
+++ b/python_basic_structures.ipynb
@@ -165,6 +165,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Searching in lists\n",
+    "\n",
+    "Python allows you to see whether a value exists easily in a list by using the `in` operator:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "my_"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### List Slicing\n",
     "\n",
     "Python lists have an incredibly powerful and flexible indexing mechanism that allows you to **slice** them (and get views of your data).  A python slice takes the form:\n",
@@ -364,8 +382,35 @@
     "\n",
     "Python sets, while cool, may not be used in these courses very much.  They are implementations of the `HashSet`, so they can only store elements that are hashable.  See https://docs.python.org/3/library/stdtypes.html#set-types-set-frozenset for more information on sets.\n",
     "\n",
-    "Note that sets are mutable, and as such are not implicitly hashable; if you want to use a `set` as a key in a dictionary (or have a set of sets) you should use the immutable and hashable `frozenset` class that Python pr"
+    "Note that sets are mutable, and as such are not implicitly hashable; if you want to use a `set` as a key in a dictionary (or have a set of sets) you should use the immutable and hashable `frozenset` class that Python provides for you."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "my_set = set([1, 2, 3, 4, 5])\n",
+    "print(5 in my_set)\n",
+    "print(10 in my_set)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
