minor changes, and lists are not hashable

--- a/python_basic_structures.ipynb
+++ b/python_basic_structures.ipynb
@@ -23,12 +23,14 @@
     "\n",
     "_Note:_ Python lists are zero indexed; the first element is at index zero, and the last element is at len(list) - 1.  Unlike languages like Java or C++ the elements in the list do NOT need to be the same type\n",
     "\n",
-    "_Other note:_ Python lists can handle _negative_ indexing; an index of -1 will print the last element, -2 will print the second to last element, etc."
+    "_Other note:_ Python lists can handle _negative_ indexing; an index of -1 will print the last element, -2 will print the second to last element, etc.\n",
+    "\n",
+    "_Other other note:_ Python lists are not hashable (this will come into play later!)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -91,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -130,11 +132,11 @@
       "5\n",
       "7\n",
       "9\n",
-      "---2\n",
-      "---6\n",
-      "---10\n",
-      "---14\n",
-      "---18\n"
+      "--- 2\n",
+      "--- 6\n",
+      "--- 10\n",
+      "--- 14\n",
+      "--- 18\n"
      ]
     }
    ],
@@ -144,7 +146,7 @@
     "    print(v)\n",
     "\n",
     "for v in list1:\n",
-    "    print('---' + str(2*v))"
+    "    print('---', str(2*v))"
    ]
   },
   {
@@ -172,11 +174,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
-    "my_"
+    "my_list = [2, 4, 6, 8, 10]\n",
+    "print(3 in my_list)\n",
+    "print(4 in my_list)"
    ]
   },
   {
@@ -250,12 +263,12 @@
     "\n",
     "Searching for values is O(n), and probably should be avoided unless you have a very good reason to do so (as values are not required to be unique, but keys must be).\n",
     "\n",
-    "Dictionaries can be created using curly brackets (`{}`), with a comma separated list of `key:value` pairs.  As with lists, dictionaries can be \"indexed\" using the key values.  Additionally, keys that have not been used yet may be assigned to (though not read from)."
+    "Dictionaries can be created using curly brackets `{}`, with a comma separated list of `key:value` pairs.  As with lists, dictionaries can be \"indexed\" using the key values.  Additionally, keys that have not been used yet may be assigned to (though not read from)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -321,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -351,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -387,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -404,13 +417,6 @@
     "print(5 in my_set)\n",
     "print(10 in my_set)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
