--- a/python_introduction.ipynb
+++ b/python_introduction.ipynb
@@ -35,7 +35,12 @@
     "## Variables\n",
     "Variables in python are easy to create, you just assign them a value and they appear.  Types... Whatever the data is.  Python is not strongly typed.  This will cause loss of hair later.  Enjoy.\n",
     "\n",
-    "print() is the way to get some output"
+    "print() is the way to get some output\n",
+    "\n",
+    "### Naming Conventions\n",
+    "* lowercase with underscores for var/fn\n",
+    "* CamelCase for ClassNames\n",
+    "* leading _ for private var/fn"
    ]
   },
   {
@@ -102,12 +107,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#Loops"
+    "## Loops\n",
+    "Standard \n",
+    "    for i in range(10)\n",
+    "    for i in range(6, 10)\n",
+    "    for i in some_iterable_structure\n",
+    "_Note:_ The loop variable is a local copy, you can change it, but the underlying value in the structure will be unchanged.\n",
+    "    \n",
+    "while boolean_condition :\n",
+    "    loop body\n",
+    "    \n",
+    "\n",
+    "   \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {
     "scrolled": false
    },
@@ -116,14 +132,43 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "10\n"
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n",
+      "-------------------\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n"
      ]
     }
    ],
    "source": [
     "#Python for loops!\n",
-    "print(a)\n",
-    "d = 20"
+    "\n",
+    "for i in range(10) :\n",
+    "    print(i)\n",
+    "\n",
+    "print(\"-------------------\")\n",
+    "# Not that we recommend changing the variable you used to \n",
+    "# set up the loop, but Python won't see it as the range is already\n",
+    "# fixed\n",
+    "n = 10\n",
+    "for i in range(1,n) :\n",
+    "    n -= 1\n",
+    "    print(i)\n"
    ]
   },
   {
