Changed i/o in introduction

--- a/python_introduction.ipynb
+++ b/python_introduction.ipynb
@@ -11,6 +11,38 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## REPL your way through life\n",
+    "\n",
+    "If you have an expression, it will be evaluated and the result will be printed.  Unfortunately, this does not happen in the notebook unless it is the last thing that executed in the cell, so we always will print what we want to see."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Hey'"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "beatle_juice = \"She loves me, yeah, yeah, yeah\"\n",
+    "beatle_juice\n",
+    "beatle_juice\n",
+    "beatle_juice"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Primitive Data"
    ]
   },
@@ -18,14 +50,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Strings"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Slices"
+    "### Strings\n",
+    "    str( any_thing ) gives you a string you can combine with other strings via concatenation\n",
+    "    \n",
+    "    \n",
+    " "
    ]
   },
   {
@@ -176,7 +205,13 @@
    "metadata": {},
    "source": [
     "## I/O\n",
-    "Need me some of that File I/O too."
+    "\n",
+    "print()\n",
+    "    Takes multiple arguments and converts each into a string and puts a space in between.  You can specify the seperator\n",
+    "input()\n",
+    "    Grabs the next line from standard input and always returns a string.\n",
+    "    \n",
+    "Can prompt for input as well."
    ]
   },
   {
@@ -185,7 +220,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#IO in Python"
+    "#IO in Python\n"
    ]
   }
  ],
