Worked on basic and numpy

--- a/python_introduction.ipynb
+++ b/python_introduction.ipynb
@@ -18,16 +18,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Hey'"
+       "'She loves me, yeah, yeah, yeah'"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -51,10 +51,38 @@
    "metadata": {},
    "source": [
     "### Strings\n",
-    "    str( any_thing ) gives you a string you can combine with other strings via concatenation\n",
+    "    str( any_value ) gives you a string you can combine with other strings via concatenation.  \n",
     "    \n",
     "    \n",
     " "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1234567\n",
+      "666\n",
+      "1234567666\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Take a number and turn it into a string\n",
+    "not_a_number = str(1234567)\n",
+    "print(not_a_number) \n",
+    "\n",
+    "#Take a string and turn it into a string\n",
+    "also_not_a_number = str('666')\n",
+    "print(also_not_a_number)\n",
+    "\n",
+    "#This is concatenating\n",
+    "print(not_a_number + also_not_a_number)"
    ]
   },
   {
