Finish discussion of returning functions in python

--- a/python_functional.ipynb
+++ b/python_functional.ipynb
@@ -369,8 +369,19 @@
    "source": [
     "## Reduce\n",
     "\n",
-    "Reducing data is a common thing you see in Big Data operations (it is half of the common **map-reduce**"
+    "Reducing data is a common thing you see in Big Data operations (it is half of the common **map-reduce** paradigm; the other half is `map`).  We will not get into a lot of detail on `reduce` in this class, but if you are interested (or think it may make your code easier to read), you can check out the documentation here: https://docs.python.org/3/library/functools.html#functools.reduce\n",
+    "\n",
+    "## Returning Functions\n",
+    "\n",
+    "Python gives you the ability to build and return functions from other functions.  While this is a CoolThing(tm) we will not need this in this course; if you are interested consult the internet for more information."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
