--- a/python_introduction.ipynb
+++ b/python_introduction.ipynb
@@ -89,6 +89,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Numbers and Arithmetic\n",
+    "/  floating\n",
+    "// integer"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Variables\n",
     "Variables in python are easy to create, you just assign them a value and they appear.  Types... Whatever the data is.  Python is not strongly typed.  This will cause loss of hair later.  Enjoy.\n",
     "\n",
@@ -97,7 +106,8 @@
     "### Naming Conventions\n",
     "* lowercase with underscores for var/fn\n",
     "* CamelCase for ClassNames\n",
-    "* leading _ for private var/fn"
+    "* leading _ for private var/fn\n",
+    "* all uppercase for constants, but its not enforced"
    ]
   },
   {
@@ -130,7 +140,13 @@
    "metadata": {},
    "source": [
     "## Selection\n",
-    "if is your friend.  We don't use braces to mark code blocks, Python uses a colon and indentation.  It is hard and fast.  If your indentation is wrong, your code is wrong. There is no fancy button fixes up your indentation, sorry.\n"
+    "if is your friend.  We don't use braces to mark code blocks, Python uses a colon and indentation.  It is hard and fast.  If your indentation is wrong, your code is wrong. There is no fancy button fixes up your indentation, sorry.\n",
+    "\n",
+    "if\n",
+    "elif\n",
+    "elif\n",
+    "else\n",
+    "\n"
    ]
   },
   {
@@ -165,10 +181,11 @@
    "metadata": {},
    "source": [
     "## Loops\n",
-    "Standard \n",
+    "Standard ways to do a loop:\n",
+    "```python\n",
     "    for i in range(10)\n",
     "    for i in range(6, 10)\n",
-    "    for i in some_iterable_structure\n",
+    "    for i in some_iterable_structure```\n",
     "_Note:_ The loop variable is a local copy, you can change it, but the underlying value in the structure will be unchanged.\n",
     "    \n",
     "while boolean_condition :\n",
@@ -226,6 +243,30 @@
     "for i in range(1,n) :\n",
     "    n -= 1\n",
     "    print(i)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.9999999850988388\n"
+     ]
+    }
+   ],
+   "source": [
+    "# While example\n",
+    "# 1 + 1/2 + 1/4 + 1/8 + ...\n",
+    "sum = 0\n",
+    "term = 1\n",
+    "while term > 0.00000001 :\n",
+    "    sum += term\n",
+    "    term = term / 2\n",
+    "print(sum)"
    ]
   },
   {
