A few more changes to functions

--- a/python_functions.ipynb
+++ b/python_functions.ipynb
@@ -3085,27 +3085,52 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Defaults and Named Arguments\n",
-    "When we define our function, we can provide default values that will be filled in if we do not provide that argument in the function call.  We can also specify the arguments by name in the function call."
+    "## Defaults and Keyword Arguments\n",
+    "When we define our function, we can provide default values that will be filled in if we do not provide that argument in the function call.  We can also specify the arguments by keyword in the function call."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "384\n",
+      "362880\n",
+      "181440\n",
+      "28\n",
+      "5068545850368000\n"
+     ]
+    }
+   ],
    "source": [
     "# This function takes three arguments and have default values\n",
     "def product(start=1, end=10, skip=1):\n",
     "    product = 1\n",
     "    current = start\n",
-    "    while start < end :\n",
+    "    while current < end :\n",
     "        product *= current\n",
     "        current += skip\n",
     "    return product\n",
     "\n",
     "# We can call it the normal way\n",
-    "print(product(2, 10, 2))"
+    "print(product(2, 10, 2))\n",
+    "\n",
+    "# We can leave out the arguments and it will use the defaults\n",
+    "print(product())\n",
+    "\n",
+    "# We can call it with just one arguement and the other two will\n",
+    "# use the defaults\n",
+    "print(product(3))\n",
+    "\n",
+    "# We can call it with arguments specified by name\n",
+    "print(product(skip=3))\n",
+    "\n",
+    "# We can put the arguments specified by name in any order\n",
+    "print(product(end=20, start=5))\n"
    ]
   }
  ],
