Added rules of the road for parameters

--- a/python_functions.ipynb
+++ b/python_functions.ipynb
@@ -3086,7 +3086,12 @@
    "metadata": {},
    "source": [
     "## Defaults and Keyword Arguments\n",
-    "When we define our function, we can provide default values that will be filled in if we do not provide that argument in the function call.  We can also specify the arguments by keyword in the function call."
+    "When we define our function, we can provide default values that will be filled in if we do not provide that argument in the function call.  We can also specify the arguments by keyword in the function call.\n",
+    "\n",
+    "_Rules of the road_\n",
+    "1. All the basic (unnamed) arguments come first in the list and match to the parameter list in the function.\n",
+    "2. Once you specify a keyword argument, the rest of the arguments must be keyword as well.  (You can put them in any order!)\n",
+    "3. If a parameter does not specify a default value, you must provide a value either in the positional part or by keyword."
    ]
   },
   {
