Add changes recommended by Charles for functional

--- a/python_functional.ipynb
+++ b/python_functional.ipynb
@@ -13,7 +13,7 @@
    "source": [
     "## Functions as \"things\"\n",
     "\n",
-    "Python treats functions as objects (much the same as any data or instance of a class).  This leads us to the ability to do some pretty powerful stuff.  Because a function can be treated the same way as data, we can do some very interesting things:"
+    "Python treats functions as objects (much the same as any data or instance of a class).  Because a function can be treated the same way as data, we can do some very interesting and powerful things:"
    ]
   },
   {
@@ -58,9 +58,9 @@
    "source": [
     "The ability to treat python functions as objects allows us to treat Python as a _functional_ programming language in some ways.  Many things that we can do in python are made much easier by either:\n",
     "\n",
-    "* applying a function to an entire data set\n",
-    "* reducing a data set\n",
-    "* filter a data set based on a predicate (function that returns true or false)\n",
+    "* applying a function to an entire data set: Keeps the resulting data set the same size\n",
+    "* filter a data set based on a predicate (function that returns true or false): Potentially shrinks the resulting data set\n",
+    "* reducing a data set: Aggregates your data into a single thing\n",
     "\n",
     "In the following sections we will see how we can use basic functional programming concepts to make Python code that is cleaner and frequently faster than the procedural approach."
    ]
@@ -185,7 +185,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Which approach seems cleaner?  If you do not find mapping functions to a list of data intuitive, you can always choose Method 1 if you wish; however, you can only _truly_ be a Python (and coding) ninja if you embrace the functional shenanigans. (This is not true, but it was fun to type).  Mapping has additional cool features (such as exposing inherant parallelism) that we will not need to take advantage of in this course.  There may be some places in this course where functional type programming in Python will be required, and it will come up frequently in my notes an code.\n",
+    "Which approach seems cleaner?  If you do not find mapping functions to a list of data intuitive, you can always choose Method 1 if you wish; however, you can only _truly_ be a Python (and coding) ninja if you embrace the functional shenanigans. (This is not true, but it was fun to type).  Mapping has additional cool features (such as exposing inherant parallelism) that we will not need to take advantage of in this course.  There may be some places in this course where functional type programming in Python will be required, and it will come up frequently in my notes and code.\n",
     "\n",
     "### Practice\n",
     "\n",
@@ -234,7 +234,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Python gives us the ability to create _nameless functions_ on the fly that perform simple operations and return values using _lambda expressions_ (the fancy name for a nameless function!).  Consider the same code using a Python Lambda:"
+    "Python gives us the ability to create _anonymous functions_ on the fly that perform simple operations and return values using _lambda expressions_ (the fancy name for a anonymous function!).  Consider the same code using a Python Lambda:"
    ]
   },
   {
@@ -298,7 +298,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "A more common usage of this is to pass functions to other functions (such as map) to reduce the amount of code.  Essentially, you are creating small, trivial functions without the overhead of creating a new `def`'d function.\n",
+    "A more common usage of this is to pass functions to other functions (such as map) to reduce the amount of code you write.  Essentially, you are creating small, trivial functions without the overhead of creating a new `def`'d function.\n",
+    "\n",
+    "Keep in mind that lambdas should be _simple_; don't try to write multi-line lambdas or ones that accomplish multiple complicated things.  Keep It Simple... Silly!\n",
     "\n",
     "### Practice\n",
     "\n",
@@ -318,9 +320,9 @@
    "source": [
     "## Filter\n",
     "\n",
-    "Just as we can apply a function to an entire iterable, we can also get all data from some iterable that meets some criteria.  Consider a situation where you are given a list of numbers, and want to know all even values in that list.  You could create a new list, iterate through the original data, and append even values to your new list.  Or, you could use the magical power of functional programming to make it easier.\n",
+    "Just as we can apply a function to an entire iterable, we can get all data from some iterable that meets some criteria.  Consider a situation where you are given a list of numbers, and want to know all even values in that list.  You could create a new list, iterate through the original data, and append even values to your new list.  Or, you could use the magical power of functional programming to make it easier.\n",
     "\n",
-    "`filter(pred, iterable)` will give back all values in the iterable such that `pred` (which can take one argument) returns `True`.  We can solve the above problem with a simple:"
+    "`filter(pred, iterable)` will give back all values in the iterable such that `pred` (which can take one argument) returns something that evaluates to `True`.  We can solve the above problem with a simple:"
    ]
   },
   {
@@ -348,6 +350,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Notice that `filter` (and `map`) do NOT modify the original list; they create a copy of the data (lazily) instead of mutating existing data.\n",
+    "\n",
     "### Practice\n",
     "\n",
     "Create a list of integers (both positive and negative.  Write code using `lambda` and `filter` that will print two pieces of information:\n",
@@ -375,13 +379,6 @@
     "\n",
     "Python gives you the ability to build and return functions from other functions.  While this is a CoolThing(tm) we will not need this in this course; if you are interested consult the internet for more information."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
