Fix small typo in matplotlib notebook

--- a/matplotlib.ipynb
+++ b/matplotlib.ipynb
@@ -165,7 +165,7 @@
    "source": [
     "## Histograms\n",
     "\n",
-    "Often it is helpful to know how many of each data value you have in a dataset.  Histograms are a great tool that allow you to bin your data based on the value.  There is an excellent example at https://matplotlib.org/gallery/statistics/histogram_features.html that will allow you to see how they work.  Correctly selecting histogram parameters (including number of bins and size of each bin) can changethe shape quite a bit.  The above link has references on how to properly select these parameters and more..\n",
+    "Often it is helpful to know how many of each data value you have in a dataset.  Histograms are a great tool that allow you to bin your data based on the value.  There is an excellent example at https://matplotlib.org/gallery/statistics/histogram_features.html that will allow you to see how they work.  Correctly selecting histogram parameters (including number of bins and size of each bin) can changethe shape quite a bit.  The above link has references on how to properly select these parameters and more.\n",
     "\n",
     "## Other data\n",
     "\n",
