Fix typo in debug notebook

--- a/python_debug.ipynb
+++ b/python_debug.ipynb
@@ -36,7 +36,7 @@
     "* Continue execution unil next breakpont (Continue)\n",
     "* Stop debugging (Stop)\n",
     "\n",
-    "The tooltips contain keyboard shortcuts if you are so inclined to use them.  Next to the button names I have put common short names for these operations in parenthesis (which is how they will be referred to throughout this tutoral.\n",
+    "The tooltips contain keyboard shortcuts if you are so inclined to use them.  Next to the button names I have put common short names for these operations in parenthesis (which is how they will be referred to throughout this tutoral).\n",
     "\n",
     "### Starting the debugger\n",
     "\n",
@@ -81,6 +81,13 @@
     "\n",
     "At any time you can run arbitrary python statements in the IPython console (with the `ipdb>` prompt) that will run using the current state of variables.  This can be useful if you want to know how some calculation will end up, or want to see the result of a more complicated expression.  Play around!"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
