Add code to debugger tutorial and fix typo

--- a/python_debug.ipynb
+++ b/python_debug.ipynb
@@ -10,7 +10,7 @@
     "\n",
     "In the past you may have done this using print statements scattered throughout your source code to see what was happening.  However, there are more sophisticated tools that allow us as programmers to get a much better idea as to what is happening when our program runs.\n",
     "\n",
-    "Note that for simple things rnning in either the editor or the IPython console, you can use the Variable explorer (by default) found in the upper right pane of Spyder to see the contents of your variabes.  Additionally the Variable explorer will do some other interesting things (like color code your 2D arrays) that can make it easier to explore your current IDE state.\n",
+    "Note that for simple things running in either the editor or the IPython console, you can use the Variable explorer (by default) found in the upper right pane of Spyder to see the contents of your variabes.  Additionally the Variable explorer will do some other interesting things (like color code your 2D arrays) that can make it easier to explore your current IDE state.\n",
     "\n",
     "A debugger is a tool that runs your code (usually slower), but allows you to pause and control execution, view variable state, and execute arbitrary commands given the current paused state at any time.  By using these we can hunt down problems in our code much easier than if we were to sprinkle print statements throughout."
    ]
@@ -37,6 +37,27 @@
     "* Stop debugging (Stop)\n",
     "\n",
     "The tooltips contain keyboard shortcuts if you are so inclined to use them.  Next to the button names I have put common short names for these operations in parenthesis (which is how they will be referred to throughout this tutoral).\n",
+    "\n",
+    "### The Code\n",
+    "\n",
+    "The following source code is used in the example:\n",
+    "\n",
+    "```python\n",
+    "def foo():\n",
+    "    x = 5\n",
+    "    y = 10\n",
+    "    return x * y\n",
+    "\n",
+    "def bar(a):\n",
+    "    return a - foo();\n",
+    "\n",
+    "my_var = 10\n",
+    "result = bar(my_var)\n",
+    "for i in range(my_var):\n",
+    "    result = bar(result)\n",
+    "    \n",
+    "print(result)\n",
+    "```\n",
     "\n",
     "### Starting the debugger\n",
     "\n",
