--- a/python_debug.ipynb
+++ b/python_debug.ipynb
@@ -21,7 +21,7 @@
    "source": [
     "## Walk through on using Debugger in Spyder\n",
     "\n",
-    "One important thing to realize is that the debugger is _only_ available when running code in the Editor tab of Spyder, not the Notebook.  This is a tool you will use to investigate issues in more complicated programs and modules that you write instead of code snippets run in the Jupyter notebooks.\n",
+    "One important thing to realize is that the debugger is _only_ available when running code in the Editor tab of Spyder.  This is a tool you will use to investigate issues in more complicated programs and modules that you write instead of code snippets run in the Jupyter notebooks.\n",
     "\n",
     "The first thing to do is familiarize yourself with the debugging toolbar:\n",
     "\n",
@@ -127,7 +127,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
